# rust-web-starter

./: .env  .gitignore  Cargo.toml  bun.lockb  package.json  tailwind.config.js
assets/: main.css
migrations/: 20231110192351_create_users_table.sql  20231110192740_create_messages_table.sql  20231110193541_add_sample_user.sql
scripts/: forms.js
src/: auth_feature.rs  chat_feature.rs  config.rs  db.rs  jwt_auth.rs  main.rs  template_service.rs
static/: index.html
templates/: base.html  chat.html  index.html  login.html  messages.html
templates/tera/: base.html  chat.html  message.html
